namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: book-ranker
  labels:
    name: book-ranker
