ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: book-ranker
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  ingressClassName: nginx
  rules:
    - host: book.ranker.com
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8080
